# xdskappa

./: .gitignore  .gitmodules  CHANELOG.md  CHANGELOG.md  CITATION.cff  Modulefile-release  README.md  USAGE.md  XDS.INP  cbfphoton2.py  compile-all.sh  compile-centos7.sh  compile-debian.sh  compile-dist.sh  compile-fedora.sh  compile-test.sh  compile-ubuntu-16.04.sh  compile.sh  photon.cbf  pyproject.toml  setup.cfg  setup.py  tox.ini  xdataset.py  xdsinp.py  xdskappa.py  xdskappa.spec
data_test/: 20190911_omega_0001.cbf  20190911_phi_0001.cbf  221109_omega_0001.cbf  221109_phi_0001.cbf  GXPARM.XDS  XPARM.XDS
docker/centos/: Dockerfile  build.sh
docker/debian/: Dockerfile  Dockerfile2
docker/fedora/: Dockerfile  build.sh
docker/ubuntu-16.04/: Dockerfile  build.sh
lib/: cbfphoton2.py  common.py  parmxds.py  xdataset.py  xdsinp.py
xdskappa/: __init__.py  __main__.py  common.py  find.py  optimize.py  parmxds.py  run_xds.py  show_stat.py  test_parmxds.py  test_xdataset.py  test_xdsinp.py  version.py  xdataset.py  xdsinp.py
xdskappa/detector/: cbfphoton2.py
