[metadata]
name = xdskappa
description = Processing X-ray diffraction data produced using multicircle difractometers with XDS
long_description = file: README.md, CHANGELOG.md
keywords = xds, data processing
license = GNU GPL 3
author = Jan Stránský
author_email = jan.stransky@ibt.cas.cz
url = None
platform = linux
classifiers =
  "Programming Language :: Python :: 3"
  "License :: OSI Approved :: GNU GPL v3"
  "Operating System :: Linux"

[options]
setup_requires =
  setuptools_scm
install_requires =  
packages = find:
data= *.md
exclude_data= .gitignore
python_requires = >= 3.5

[options.entry_points]
console_scripts =
  xdskappa = xdskappa.__main__:main
  xdskappa.find = xdskappa.find:main
  xdskappa.optimize = xdskappa.optimize:main
  xdskappa.run_xds = xdskappa.run_xds:main
  xdskappa.show_stat = xdskappa.show_stat:main
  
[sdist]
formats = gztar
